--- a/index.html
+++ b/index.html
@@ -2,10 +2,42 @@
 <html lang="en">
 <head>
     <title>Exercise 1</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <center>
         <h1>Biodata</h1>
+        <img src="pleading-face.png" height=15% width=15%>
+        <form>
+            <div id="nama" class="important">
+                <div class="attrib">
+                    <label>Nama: </label>
+                </div>
+                <div class="isian">
+                    <input label="Nama" type="text" disabled value="William"> 
+                </div>
+            </div>
+            <div id="nomor telepon" class="important">
+                <div class="attrib">
+                    Nomor telepon :
+                </div>
+                <div class="isian">
+                    +628111366576
+                </div>
+            </div>
+            <div id="tanggal lahir" class="notimportant">
+                <div class="attrib">
+                    Tanggal lahir : 
+                </div>
+                <div class="isian">
+                    1993-09-09
+                </div>
+            </div>
+        </form>
+        <div class="alert alert-primary">
+            Terima kasih sudah membaca 😉
+          </div>
     </center>
 </body>
 </html>
